--- a/portal/src/main/resources/public/admin/css/modules.less
+++ b/portal/src/main/resources/public/admin/css/modules.less
@@ -1764,3 +1764,12 @@ i.close-2x{
 		margin-top: 20px;
 	}
 }
+
+.button-horizontal-bar{
+    text-align: center;
+
+    > button {
+        float: none;
+        display: inline-block;
+    }
+}
